--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Journalists -- Fiction'
 - !lcsh 'Fantasy fiction'
 - !lcsh 'Paranormal fiction'
+- GITenberg
 title: The False Gods
 url: http://www.gutenberg.org/ebooks/17020
